# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created November 18, 2022 by Perkins
# Last Change: 2022-11-18 08:53:22 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# programs
# -------------------------------------------------------------
add_executable(ann2fig ann2fig.cpp)
target_link_libraries(ann2fig ANN)


# -------------------------------------------------------------
# Installation
# -------------------------------------------------------------
install(TARGETS 
  ann2fig
  DESTINATION bin
)
