# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created November 18, 2022 by Perkins
# Last Change: 2022-11-18 08:35:13 d3g096
# -------------------------------------------------------------

add_executable(ann_sample ann_sample.cpp)
target_link_libraries(ann_sample ANN)
