# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created November 18, 2022 by Perkins
# Last Change: 2022-11-18 09:33:11 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# programs
# -------------------------------------------------------------
add_executable(ann_sample ann_sample.cpp)
target_link_libraries(ann_sample ANN)

# -------------------------------------------------------------
# Installation
# -------------------------------------------------------------
install(TARGETS
  ann_sample
  DESTINATION bin
)

install(FILES
  data.pts
  query.pts
  sample.save
  DESTINATION share/ANN/sample
)
