# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created November 18, 2022 by Perkins
# Last Change: 2022-11-18 08:32:00 d3g096
# -------------------------------------------------------------

add_executable(ann_test ann_test.cpp rand.cpp)
target_link_libraries(ann_test ANN)
